log
Thu 23 Mar 2023 03:30:30 PM UTC: 
 tests:  0|6
total_score: 0/70
b3c68e4
Thu 23 Mar 2023 03:54:59 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List *lista = (List *)malloc(sizeof(List));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
1bf6b24
Thu 23 Mar 2023 03:57:04 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
0775be9
Thu 23 Mar 2023 03:57:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c481a2c
Thu 23 Mar 2023 04:26:20 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   45 |   if(n == NULL)
      |   ^~
list.c:47:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   47 |     return n->data;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
90c0181
Sat 25 Mar 2023 09:42:02 PM UTC: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  2|5
total_score: 15/70
aa7fc61
Sat 25 Mar 2023 09:44:35 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
36449da
Sat 25 Mar 2023 09:47:28 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dfbaf8f
Sat 25 Mar 2023 09:57:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c138155
Sat 25 Mar 2023 09:58:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e7cabd1
Sat 25 Mar 2023 09:59:07 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:58:26: error: expected ‘;’ before ‘}’ token
   58 |   return list->tail->data
      |                          ^
      |                          ;
   59 | }
      | ~                         
Compilation failed
66e5714
Sat 25 Mar 2023 09:59:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
7140ab6
Sat 25 Mar 2023 10:09:12 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
b17a297
Sat 25 Mar 2023 10:41:36 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
642f0ac
